--- a/prática/index.html
+++ b/prática/index.html
@@ -43,6 +43,13 @@
           alt="brobra"
         />
       </div>
+
+      <div>
+        <p>
+          Central California — The person who grew these was located in Central
+          California and, er, hopefully very well-compensated.
+        </p>
+      </div>
     </main>
   </body>
 </html>
