--- a/prática/index.html
+++ b/prática/index.html
@@ -37,19 +37,18 @@
           alt="folha"
         />
 
+      <div class="legenda">        
         <img
           class="img2"
           src="imagens/Stocksy_txp226f62b2aNe300_Medium_4582193 1.png"
           alt="brobra"
         />
-      </div>
-
-      <div>
         <p>
-          Central California — The person who grew these was located in Central
+          <strong>Central California</strong> — The person who grew these was located in Central
           California and, er, hopefully very well-compensated.
         </p>
       </div>
+
     </main>
   </body>
 </html>
