--- a/prática/index.html
+++ b/prática/index.html
@@ -31,24 +31,44 @@
       </div>
 
       <div class="folha">
-        <img
-          class="img1"
-          src="imagens/jonathan-kemper-1HHrdIoLFpU-unsplash 1.png"
-          alt="folha"
-        />
+        <img class="img1" src="imagens/svg1.svg" alt="folha" />
 
-      <div class="legenda">        
-        <img
-          class="img2"
-          src="imagens/Stocksy_txp226f62b2aNe300_Medium_4582193 1.png"
-          alt="brobra"
-        />
+        <div class="legenda">
+          <img class="img2" src="imagens/svg2.svg" alt="brobra" />
+          <p>
+            <strong>Central California</strong> — The person who grew these was
+            located in Central California and, er, hopefully very
+            well-compensated.
+          </p>
+        </div>
+      </div>
+      <div class="texto2">
+        <p class="corno"><strong>WHAT WE BELIEVE</strong></p>
         <p>
-          <strong>Central California</strong> — The person who grew these was located in Central
-          California and, er, hopefully very well-compensated.
+          We believe in produce. Tasty produce. Produce like: <br /><br />
+          Apples. Oranges. Limes. Lemons. Guavas. Carrots. Cucumbers. Jicamas.
+          Cauliflowers.br <br />
+          Brussels sprouts. Shallots. Japanese eggplants. Asparagus.
+          Artichokes—Jerusalem <br />
+          artichokes, too. Radishes. Broccoli. Baby broccoli. Broccolini. Bok
+          choy. Scallions. <br />
+          Ginger. Cherries. Raspberries. Cilantro. Parsley. Dill. <br /><br />
+          What are we forgetting? <br /><br />
+          Oh! Onions. Yams. Avocados. Lettuce. Arugula (to some, “rocket”).
+          Persian cucumbers, <br />
+          in addition to aforementioned “normal” cucumbers. Artichokes.
+          Zucchinis. Pumpkins. <br />
+          Squash (what some cultures call pumpkins). Sweet potatoes and
+          potato-potatoes.br <br />
+          Jackfruit. Monk fruit. Fruit of the Loom. Fruits of our labor (this
+          website). Sorrel. <br />
+          Pineapple. Mango. Gooseberries. Blackberries. Tomatoes. Heirloom
+          tomatoes. Beets. <br />
+          Chives. Corn. Endive. Escarole, which, we swear, we’re vendors of
+          organic produce, <br />
+          but if you asked us to describe what escaroles are...
         </p>
       </div>
-
     </main>
   </body>
 </html>
