--- a/prática/index.html
+++ b/prática/index.html
@@ -14,7 +14,7 @@
         <a href="">Newstand</a>
         <a href="">Who we are </a>
         <a href="">My profile</a>
-        <a class="basket" href="">Basket (3)</a>
+        <a class="basket" href="basket.html">Basket (3)</a>
       </nav>
     </header>
     <main>
