--- a/prática/index.html
+++ b/prática/index.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <header>
-      <h1>World Peas</h1>
+      <h1><a href="index.html">World Peas</a></h1>
       <nav>
-        <a href="">Shop</a>
+        <a href="shop.html">Shop</a>
         <a href="">Newstand</a>
         <a href="">Who we are </a>
         <a href="">My profile</a>
