--- a/prática/basket.html
+++ b/prática/basket.html
@@ -14,7 +14,7 @@
         <nav>
           <a href="shop.html">Shop</a>
           <a href="">Newstand</a>
-          <a href="">Who we are </a>
+          <a href="https://github.com/brendonbelazzi" target="_blank">Who we are </a>
           <a href="">My profile</a>
           <a class="basket" href="index.html">Basket (3)</a>
 
