--- a/prática/index.html
+++ b/prática/index.html
@@ -16,7 +16,9 @@
       <nav>
         <a href="shop.html">Shop</a>
         <a href="">Newstand</a>
-        <a href="">Who we are </a>
+        <a href="https://github.com/brendonbelazzi" target="_blank"
+          >Who we are
+        </a>
         <a href="">My profile</a>
         <a class="basket" href="basket.html">Basket (3)</a>
       </nav>
