--- a/prática/index.html
+++ b/prática/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Peas</title>
     <link rel="stylesheet" href="estilos/style.css" />
+    <link rel="shortcut icon" href="imagens/folha.png" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
