--- a/prática/shop.html
+++ b/prática/shop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
+    <link rel="shortcut icon" href="imagens/folha.png" type="image/x-icon" />
     <link rel="stylesheet" href="estilos/shop.css" />
   </head>
   <body>
